[gd_scene load_steps=28 format=3 uid="uid://c2spcpvg7hvux"]

[ext_resource type="Script" uid="uid://w41jqpdf1uh3" path="res://Creatures/Enemies/kirt_2/kirt_2.gd" id="1_45ncw"]
[ext_resource type="Texture2D" uid="uid://cmug10yuvwugl" path="res://Creatures/Enemies/kirt_2/y57g765g67546645f67g.png" id="1_nvb8v"]
[ext_resource type="Script" uid="uid://er36p51ct6oj" path="res://Scripts/state_machine.gd" id="3_8l1xb"]
[ext_resource type="Script" uid="uid://0p3775ltqw83" path="res://Creatures/Enemies/kirt_2/stm_kirt_2/IdleKirt_2State.gd" id="4_sx3qt"]
[ext_resource type="Script" uid="uid://bxjgeublt1oai" path="res://Creatures/Enemies/kirt_2/stm_kirt_2/ChaseKirt_2State.gd" id="5_0x2di"]
[ext_resource type="Script" uid="uid://c4gr1s7dwi8t1" path="res://Creatures/Enemies/kirt_2/stm_kirt_2/AtkKirt_2State.gd" id="6_irifb"]
[ext_resource type="Script" uid="uid://bws6y0leajpe7" path="res://Creatures/Enemies/kirt_2/stm_kirt_2/StanKirt_2State.gd" id="7_ebnwp"]
[ext_resource type="Script" uid="uid://cskvws5tn8dwq" path="res://Creatures/Enemies/kirt_2/stm_kirt_2/DeadKirt_2State.gd" id="8_17qwg"]
[ext_resource type="Texture2D" uid="uid://4n1xfckegc3o" path="res://Texture/huita/inter_demo/hp_bar_main_test.png" id="9_pfskg"]
[ext_resource type="Texture2D" uid="uid://c7qj8sx0r12jw" path="res://Texture/huita/inter_demo/hp_bar_lives_blue_test.png" id="10_u8lnq"]
[ext_resource type="Script" uid="uid://cg5wu1krfhn78" path="res://Scripts/HurtBox.gd" id="11_wfkmi"]
[ext_resource type="AudioStream" uid="uid://b3473eplax5qs" path="res://Sound/test/wa_SHORT.wav" id="12_sssy6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mx6xb"]
atlas = ExtResource("1_nvb8v")
region = Rect2(500, 500, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_ub5ak"]
atlas = ExtResource("1_nvb8v")
region = Rect2(0, 0, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_s440m"]
atlas = ExtResource("1_nvb8v")
region = Rect2(500, 0, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjb4s"]
atlas = ExtResource("1_nvb8v")
region = Rect2(500, 0, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_ial2d"]
atlas = ExtResource("1_nvb8v")
region = Rect2(0, 0, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6xax"]
atlas = ExtResource("1_nvb8v")
region = Rect2(0, 1500, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_osgpd"]
atlas = ExtResource("1_nvb8v")
region = Rect2(0, 500, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlq2d"]
atlas = ExtResource("1_nvb8v")
region = Rect2(0, 500, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_dtaa8"]
atlas = ExtResource("1_nvb8v")
region = Rect2(0, 1000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_8sd6k"]
atlas = ExtResource("1_nvb8v")
region = Rect2(500, 1000, 500, 500)

[sub_resource type="SpriteFrames" id="SpriteFrames_n73lp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mx6xb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mx6xb")
}],
"loop": false,
"name": &"akt_commit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ub5ak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s440m")
}],
"loop": false,
"name": &"atk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjb4s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ial2d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ial2d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ial2d")
}],
"loop": false,
"name": &"damage",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6xax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6xax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6xax")
}],
"loop": false,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_osgpd")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlq2d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtaa8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlq2d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8sd6k")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_c0guk"]
height = 1.6

[sub_resource type="ViewportTexture" id="ViewportTexture_vsklv"]
viewport_path = NodePath("SubViewport")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_o84pi"]
radius = 1.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_fgcl1"]
height = 0.2
radius = 0.6

[node name="Kirt_2" type="CharacterBody3D" node_paths=PackedStringArray("DEFAULT_ST", "HURT_BOX", "COLLISION", "H_BAR", "ANIM_PL") groups=["Enemy", "Needs_be_save"]]
collision_layer = 28
collision_mask = 7
script = ExtResource("1_45ncw")
DEFAULT_ST = NodePath("KirtStateMachine/IdleKirt_2State")
HURT_BOX = NodePath("HurtBox")
COLLISION = NodePath("CollisionShape3D")
H_BAR = NodePath("SubViewport/ProgressBar")
ANIM_PL = NodePath("AnimatedSprite3D")

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, 0.7, 0)
billboard = 2
sprite_frames = SubResource("SpriteFrames_n73lp")
animation = &"akt_commit"
autoplay = "idle"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_c0guk")

[node name="KirtStateMachine" type="Node" parent="." node_paths=PackedStringArray("CUR_ST")]
script = ExtResource("3_8l1xb")
CUR_ST = NodePath("IdleKirt_2State")

[node name="IdleKirt_2State" type="Node" parent="KirtStateMachine"]
script = ExtResource("4_sx3qt")

[node name="ChaseKirt_2State" type="Node" parent="KirtStateMachine" node_paths=PackedStringArray("nav_agent")]
script = ExtResource("5_0x2di")
nav_agent = NodePath("../../NavigationAgent3D")

[node name="AtkKirt_2State" type="Node" parent="KirtStateMachine"]
script = ExtResource("6_irifb")

[node name="StanKirt_2State" type="Node" parent="KirtStateMachine"]
script = ExtResource("7_ebnwp")

[node name="DeadKirt_2State" type="Node" parent="KirtStateMachine"]
script = ExtResource("8_17qwg")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
debug_enabled = true

[node name="RecalcTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Raycast" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, -10)
collision_mask = 3
collide_with_areas = true
debug_shape_custom_color = Color(0.708281, 0.915051, 0, 1)
debug_shape_thickness = 5

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(240, 40)

[node name="ProgressBar" type="TextureProgressBar" parent="SubViewport"]
offset_right = 250.0
offset_bottom = 40.0
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
max_value = 10.0
value = 10.0
texture_under = ExtResource("9_pfskg")
texture_progress = ExtResource("10_u8lnq")
texture_progress_offset = Vector2(20, 10)

[node name="Label" type="Label" parent="SubViewport/ProgressBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "10/10"

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
billboard = 2
texture = SubResource("ViewportTexture_vsklv")

[node name="Atk_Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="HurtBox" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.8, 0)
collision_layer = 8
collision_mask = 0
script = ExtResource("11_wfkmi")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HurtBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_o84pi")

[node name="Area3D_for_jump" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
collision_layer = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D_for_jump"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.8, 0)
shape = SubResource("CylinderShape3D_fgcl1")

[node name="Jump_Timer" type="Timer" parent="Area3D_for_jump"]

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("12_sssy6")

[connection signal="timeout" from="Atk_Timer" to="." method="_on_atk_timer_timeout"]
[connection signal="body_entered" from="Area3D_for_jump" to="." method="_on_area_3d_for_jump_body_entered"]
[connection signal="timeout" from="Area3D_for_jump/Jump_Timer" to="." method="_on_jump_timer_timeout"]
